--- a/app/src/main/res/layout/content_main_random.xml
+++ b/app/src/main/res/layout/content_main_random.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -99,4 +99,4 @@
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
-</android.support.v4.widget.NestedScrollView>
+</ScrollView>
