--- a/app/src/main/res/layout/app_bar_main_random.xml
+++ b/app/src/main/res/layout/app_bar_main_random.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,7 +37,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main_random" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:id="@+id/home_container"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
