--- a/app/src/main/res/layout/sections_item.xml
+++ b/app/src/main/res/layout/sections_item.xml
@@ -15,6 +15,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/text_margin"
+                android:id="@+id/sections_text"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="15dp"
