--- a/app/src/main/res/layout/app_bar_main_random.xml
+++ b/app/src/main/res/layout/app_bar_main_random.xml
@@ -29,6 +29,7 @@
                     android:gravity="center"
                     android:textColor="#FFF"
                     android:textSize="20dp"
+                    android:id="@+id/toolbar_title"
                     android:fontFamily="sans-serif-medium"
                     android:textStyle="bold"
                     android:text="wikiEdit"/>
@@ -37,10 +38,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:id="@+id/home_container"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:fitsSystemWindows="false"
+        android:id="@+id/fragment_container"
+        android:layout_marginTop="?android:attr/actionBarSize"
         android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
@@ -48,6 +50,7 @@
         android:layout_width="wrap_content"
         app:fabSize="normal"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/edit" />
