--- a/app/src/main/res/layout/listitem_load_project.xml
+++ b/app/src/main/res/layout/listitem_load_project.xml
@@ -6,6 +6,10 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:layout_marginTop="6dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -24,15 +28,25 @@
                 android:id="@+id/imageView3" />
 
             <TextView
+                android:layout_width="?android:attr/listPreferredItemHeight"
+                android:layout_height="?android:attr/listPreferredItemHeight"
+                android:text="Y"
+                android:textSize="30dp"
+                android:gravity="center"
+                android:textColor="#000"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:id="@+id/imageText" />
+
+            <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:textSize="20dp"
-                android:textStyle="bold"
                 android:textColor="#000"
                 android:id="@+id/textView3"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="6dp"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/imageView3" />
 
