Major Mocks Updated.

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="octacode.allblue.code.wikipediaeditor.DetailActivity">
+    tools:context="octacode.allblue.code.wikipediaeditor.activities.DetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -46,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="octacode.allblue.code.wikipediaeditor.DetailActivity">
+        tools:context="octacode.allblue.code.wikipediaeditor.activities.DetailActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -102,6 +103,7 @@
             android:layout_below="@+id/sections_tag"
             android:layout_height="wrap_content"
             android:id="@+id/recycler_sections"/>
+
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
@@ -113,7 +115,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:fabSize="normal"
-        android:src="@drawable/menu_search"
+        android:src="@drawable/edit"
         app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
