--- a/app/src/main/res/layout/main_random_list_item.xml
+++ b/app/src/main/res/layout/main_random_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="10dp"
     android:layout_margin="5dp"
     android:layout_width="match_parent"
-    android:layout_height="170dp">
+    android:layout_height="120dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -15,11 +15,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="#000"
         android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
+            android:alpha="0.9"
             android:layout_height="match_parent"
             android:src="@drawable/police"/>
 
