--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,59 +5,71 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="octacode.allblue.code.wikipediaeditor.LoginActivity">
+    tools:context="octacode.allblue.code.wikipediaeditor.activities.LoginActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
+        android:orientation="vertical"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:id="@+id/textInputLayoutUsername"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="150dp">
-
+        android:id="@+id/textInputLayoutUsername">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
+            android:id="@+id/login_username"
+            android:padding="@dimen/text_margin"
             android:gravity="center_vertical"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/testInputLayoutPassword"
-        android:layout_below="@+id/textInputLayoutUsername"
-        android:layout_alignParentStart="true"
-        android:layout_toEndOf="@+id/textInputLayoutUsername"
-        android:layout_marginStart="3dp">
-
+        android:id="@+id/testInputLayoutPassword">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:id="@+id/login_password"
+            android:padding="@dimen/text_margin"
             android:gravity="center_vertical"/>
     </android.support.design.widget.TextInputLayout>
-
-    <ImageView
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        app:srcCompat="@drawable/apple"
-        android:layout_marginTop="14dp"
-        android:id="@+id/imageView5"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         app:fabSize="normal"
-        app:srcCompat="@drawable/apple"
-        android:layout_below="@+id/testInputLayoutPassword"
+        android:src="@drawable/wiki"
+        android:layout_below="@+id/linearLayout"
         android:layout_toEndOf="@+id/imageView5"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="35dp"
-        android:id="@+id/floatingActionButton4" />
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="41dp"
+        android:id="@+id/login_fab" />
+
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        app:srcCompat="@drawable/wiki"
+        android:id="@+id/imageView5"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Forgot Password?"
+        android:textColor="@android:color/holo_purple"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/forgot_password"
+        android:layout_below="@+id/linearLayout"
+        android:layout_toStartOf="@+id/imageView5" />
 
 </RelativeLayout>
