--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="octacode.allblue.code.wikipediaeditor.SearchActivity">
+    tools:context="octacode.allblue.code.wikipediaeditor.activities.SearchActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
