--- a/app/src/main/res/layout/listitem_load_project.xml
+++ b/app/src/main/res/layout/listitem_load_project.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_marginTop="6dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,12 +19,11 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:background="@color/BayBlue"
                 android:layout_width="?android:attr/listPreferredItemHeight"
                 android:layout_height="?android:attr/listPreferredItemHeight"
-                app:srcCompat="@drawable/wiki_logo"
                 android:layout_centerVertical="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
                 android:id="@+id/imageView3" />
 
             <TextView
@@ -33,13 +32,12 @@
                 android:text="Y"
                 android:textSize="30dp"
                 android:gravity="center"
-                android:textColor="#000"
+                android:textColor="#FFF"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
                 android:id="@+id/imageText" />
 
             <TextView
-                android:text="TextView"
+                android:text="Apple"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
@@ -51,7 +49,7 @@
                 android:layout_toEndOf="@+id/imageView3" />
 
             <TextView
-                android:text="TextView"
+                android:text="Kumar Shashwat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView5"
